<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PagamentoActivity">

    <TextView
        android:id="@+id/pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/digite_as_informa_es_do_cart_o_de_cr_dito_que_voc_deseja_usar_para_o_pagamento"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamento_valor_da_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/valor_da_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_orientacao" />

    <TextView
        android:id="@+id/pagamento_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pagamento_valor_da_compra"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_da_compra"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/n_mero_do_cart_o"
        android:inputType="number"
        android:maxLength="12"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_preco_pacote" />

    <EditText
        android:id="@+id/pagamento_mes_cartao"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/mm"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_ano_cartao"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:hint="@string/aa"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toEndOf="@id/pagamento_mes_cartao" />

    <EditText
        android:id="@+id/pagamento_cvc_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvc"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@id/pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_nome_no_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:digits="qwertyuiopasdfghjklçzxcvbnmQWERTYUIOPASDFGHJKLÇZXCVBNM "
        android:hint="@string/nome_no_cartao"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_cvc_cartao" />

    <Button
        android:id="@+id/pagamento_botao_finaliza_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FB8C00"
        android:text="@string/finalizar_compra"
        android:textColor="@color/white"
        app:circularflow_radiusInDP="10dp"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_nome_no_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_nome_no_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_nome_no_cartao" />

</androidx.constraintlayout.widget.ConstraintLayout>